# updater

./: Cargo.toml  LICENSE-MIT  README.md  README_ru.md  cog.toml
docs/: adr-01.md  adr-main.md  adr-sign-tool.md
src/: error.rs  lib.rs  sign_tool.rs
tests/: sign_tool.rs
