[package]
name = "updater"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Universal self-update system for portable Windows applications"

[[bin]]
name = "sign_tool"
path = "src/sign_tool.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
ed25519-dalek = { version = "2.2.0", features = ["pem", "pkcs8", "rand_core"] }
hex = "0.4.3"
rand = "0.8"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
